--- a/examples/index.html
+++ b/examples/index.html
@@ -3,9 +3,6 @@
 <head>
   <meta charset="utf-8">
   <title>Day Schedule Selector Example</title>
-  <!--[if IE]>
-    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-  <![endif]-->
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
@@ -13,7 +10,7 @@
 
   <div id="day-schedule"></div>
 
-  <script src="vendor/javascripts/jquery-1.11.2.js"></script>
+  <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
   <script src="../src/index.js"></script>
   <script>
     (function ($) {
